# Anno-1404-Assistant

./: README.md  package-lock.json  package.json
src/: App.tsx  ImageGallery.tsx  Layouts.tsx  PopulationForm.tsx  ProductionChain.tsx  Views.tsx  formContext.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/context/: formContext.tsx  notificationContext.tsx
src/layouts/: Layouts.tsx  readLayouts.ts
src/lib/: buildings.ts  calculation.ts  consumption.ts  game-versions.ts  items.ts  layouts.ts  population-offsets.ts  population.ts  populationEnum.ts  process.ts  production.ts  util.ts
src/lib/assets/: buildings.ts  items.ts  population.ts
src/views/: ConsumptionView.tsx  PopulationView.tsx  ProductionView.tsx  common.tsx  index.ts
